[gd_scene load_steps=2 format=3 uid="uid://dvyrwc45la4ut"]

[ext_resource type="Script" path="res://World/game_won.gd" id="1_woc4o"]

[node name="GameWon" type="CanvasLayer"]
script = ExtResource("1_woc4o")

[node name="GameWonMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameWonMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="GameWonMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameWonMenu/CenterContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GameWonMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "You Won!"
horizontal_alignment = 1

[node name="LabelScore" type="Label" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="QuitButton" type="Button" parent="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="GameWonMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
